Merged FCS version of release55 branch into trunk. This merge is tagged with cnd-trunk-merge2.