@@ -19,22 +19,17 @@
 
 package org.netbeans.modules.cnd.debugger.gdb.breakpoints;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.net.URI;
 import javax.swing.JPanel;
-import javax.swing.JOptionPane;
 import javax.swing.text.Document;
 import javax.swing.text.StyledDocument;
+
 import org.netbeans.api.debugger.DebuggerManager;
-
-//import org.netbeans.api.debugger.jpda.LineBreakpoint;
-//import org.netbeans.modules.debugger.jpda.ui.EditorContextBridge;
-//import org.netbeans.modules.debugger.jpda.ui.FilteredKeymap;
-import org.netbeans.modules.cnd.debugger.gdb.breakpoints.LineBreakpoint;
-import org.netbeans.modules.cnd.debugger.gdb.EditorContextBridge;
+import org.netbeans.api.debugger.Breakpoint;
 import org.netbeans.spi.debugger.ui.Controller;
-
-import java.net.URI;
 import org.openide.DialogDisplayer;
 import org.openide.NotifyDescriptor;
 import org.openide.cookies.EditorCookie;
@@ -43,7 +38,13 @@ import org.openide.filesystems.URLMapper;
 import org.openide.loaders.DataObject;
 import org.openide.loaders.DataObjectNotFoundException;
 import org.openide.text.NbDocument;
+import org.openide.util.HelpCtx.Provider;
 import org.openide.util.NbBundle;
+
+import org.netbeans.modules.cnd.debugger.gdb.EditorContextBridge;
+import org.netbeans.modules.cnd.debugger.gdb.GdbDebugger;
+import org.openide.util.HelpCtx;
+import org.openide.util.Utilities;
 
 /**
  * Panel for customizing line breakpoints.
@@ -54,75 +55,103 @@ import org.openide.util.NbBundle;
 // Implement HelpCtx.Provider interface to provide help ids for help system
 // public class LineBreakpointPanel extends JPanel implements Controller {
 //
-public class LineBreakpointPanel extends JPanel implements Controller, org.openide.util.HelpCtx.Provider {
+public class LineBreakpointPanel extends JPanel implements Controller, HelpCtx.Provider {
     
     private ActionsPanel                actionsPanel; 
     private LineBreakpoint              breakpoint;
     private boolean                     createBreakpoint = false;
     
     
-    private static LineBreakpoint createBreakpoint () {
-        LineBreakpoint mb = LineBreakpoint.create (
-            EditorContextBridge.getCurrentURL (),
-            EditorContextBridge.getCurrentLineNumber ()
-        );
-        mb.setPrintText (
-            NbBundle.getBundle (LineBreakpointPanel.class).getString 
-                ("CTL_Line_Breakpoint_Print_Text")
-        );
-        return mb;
-    }
-    
     
     /** 
      * Creates new form LineBreakpointPanel
      */
-    public LineBreakpointPanel () {
-        this (createBreakpoint ());
+    public LineBreakpointPanel() {
+        this(createBreakpoint());
         createBreakpoint = true;
     }
     
     /** 
      * Creates new form LineBreakpointPanel
      */
-    public LineBreakpointPanel (LineBreakpoint b) {
+    public LineBreakpointPanel(LineBreakpoint b) {
+	String mime = null;
+	String url = b.getURL();
+	
         breakpoint = b;
-        initComponents ();
+        initComponents();
 
-        String url = b.getURL();
         try {
-            URI uri = new URI(url);
-            tfFileName.setText(uri.getPath());
-        } catch (Exception e) {
-            tfFileName.setText(url);
-        }
-        tfLineNumber.setText(Integer.toString(b.getLineNumber()));
-        tfCondition.setText (b.getCondition ());
+	    FileObject fo = URLMapper.findFileObject(new URL(url));
+	    if (fo != null) {
+		mime = fo.getMIMEType();
+	    }
+	} catch (MalformedURLException mue) {
+	}
+	
+	/*
+	 * If we have a valid url and mime type then seed the dialog text field
+	 * with its path. If not (this could happen if we were adding a Line breakpoint
+	 * while a Java file had focus in the editor) then make the text field empty
+	 * but writable.
+	 */
+	if (url.length() > 0 && mime != null &&
+		    (mime.equals("text/x-c++") || mime.equals("text/x-c") || mime.equals("text/x-fortran"))) {
+	    try {
+		URI uri = new URI(url);
+		String path = uri.getPath();
+		if (Utilities.isWindows() && path.charAt(0) == '/') {
+		    path = path.substring(1);
+		}
+		tfFileName.setText(path);
+	    } catch (Exception e) {
+		tfFileName.setText(url);
+	    }
+	} else {
+	    tfFileName.setEditable(true);
+	}
+	tfLineNumber.setText(Integer.toString(b.getLineNumber()));
+        tfCondition.setText(b.getCondition());
         setupConditionPane();
         
-        actionsPanel = new ActionsPanel (b);
-        pActions.add (actionsPanel, "Center");
+        actionsPanel = new ActionsPanel(b);
+        pActions.add(actionsPanel, "Center");  // NOI18N
+    }
+    
+    private static LineBreakpoint createBreakpoint() {
+	String url = EditorContextBridge.getMostRecentURL();
+	int lnum = EditorContextBridge.getMostRecentLineNumber();
+	
+	LineBreakpoint lb = LineBreakpoint.create(url, lnum);
+        lb.setPrintText(NbBundle.getBundle(LineBreakpointPanel.class).getString("CTL_Line_Breakpoint_Print_Text"));
+        return lb;
     }
     
     private static int findNumLines(String url) {
         FileObject file;
         try {
-            file = URLMapper.findFileObject (new URL(url));
+            file = URLMapper.findFileObject(new URL(url));
         } catch (MalformedURLException e) {
             return 0;
         }
-        if (file == null) return 0;
+        if (file == null) {
+	    return 0;
+	}
         DataObject dataObject;
         try {
-            dataObject = DataObject.find (file);
+            dataObject = DataObject.find(file);
         } catch (DataObjectNotFoundException ex) {
             return 0;
         }
         EditorCookie ec = (EditorCookie) dataObject.getCookie(EditorCookie.class);
-        if (ec == null) return 0;
+        if (ec == null) {
+	    return 0;
+	}
         ec.prepareDocument().waitFinished();
         Document d = ec.getDocument();
-        if (!(d instanceof StyledDocument)) return 0;
+        if (!(d instanceof StyledDocument)) {
+	    return 0;
+	}
         StyledDocument sd = (StyledDocument) d;
         return NbDocument.findLineNumber(sd, sd.getLength());
     }
@@ -153,7 +182,7 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
      * Implement getHelpCtx() with the correct helpID
     */
     public org.openide.util.HelpCtx getHelpCtx() {
-        return new org.openide.util.HelpCtx("NetbeansDebuggerBreakpointLineJPDA"); // NOI18N
+        return new HelpCtx("NetbeansDebuggerBreakpointLineGDB"); // NOI18N
     }
     
     /** This method is called from within the constructor to
@@ -180,10 +209,10 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
 
         pSettings.setLayout(new java.awt.GridBagLayout());
 
-        pSettings.setBorder(new javax.swing.border.TitledBorder(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("L_Line_Breakpoint_BorderTitle")));
+        pSettings.setBorder(javax.swing.BorderFactory.createTitledBorder(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("L_Line_Breakpoint_BorderTitle")));
         jLabel3.setDisplayedMnemonic(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("MN_L_Line_Breakpoint_File_Name").charAt(0));
-        jLabel3.setText(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("L_Line_Breakpoint_File_Name"));
         jLabel3.setLabelFor(tfFileName);
+        jLabel3.setText(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("L_Line_Breakpoint_File_Name"));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
         gridBagConstraints.gridy = 1;
@@ -207,6 +236,7 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
 
         tfFileName.setEditable(false);
         tfFileName.setToolTipText(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("TTT_TF_Line_Breakpoint_File_Name"));
+        tfFileName.setEnabled(false);
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 1;
@@ -218,8 +248,8 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
         tfFileName.getAccessibleContext().setAccessibleDescription(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("ACSD_TF_Line_Breakpoint_File_Name"));
 
         jLabel1.setDisplayedMnemonic(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("MN_L_Line_Breakpoint_Line_Number").charAt(0));
-        jLabel1.setText(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("L_Line_Breakpoint_Line_Number"));
         jLabel1.setLabelFor(tfLineNumber);
+        jLabel1.setText(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("L_Line_Breakpoint_Line_Number"));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
         gridBagConstraints.gridy = 3;
@@ -243,8 +273,11 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
 
         spCondition.setHorizontalScrollBarPolicy(javax.swing.ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
         spCondition.setToolTipText(org.openide.util.NbBundle.getMessage(LineBreakpointPanel.class, "ACSD_TF_Line_Breakpoint_Condition"));
+        tfCondition.setEditable(false);
+        tfCondition.setText(java.util.ResourceBundle.getBundle("org/netbeans/modules/cnd/debugger/gdb/breakpoints/Bundle").getString("HINT_UnimplementedCondition"));
         tfCondition.setToolTipText(org.openide.util.NbBundle.getMessage(LineBreakpointPanel.class, "ACSD_TF_Line_Breakpoint_Condition"));
         tfCondition.setContentType("text/x-java");
+        tfCondition.setEnabled(false);
         spCondition.setViewportView(tfCondition);
 
         gridBagConstraints = new java.awt.GridBagConstraints();
@@ -276,8 +309,7 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
         gridBagConstraints.weighty = 1.0;
         add(jPanel1, gridBagConstraints);
 
-    }
-    // </editor-fold>//GEN-END:initComponents
+    }// </editor-fold>//GEN-END:initComponents
 
     
     // Controller implementation ...............................................
@@ -287,17 +319,53 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
      *
      * @return whether customizer can be closed
      */
-    public boolean ok () {
-        String msg = valiadateMsg();
+    public boolean ok() {
+        String msg = validateBreakpoint();
         if (msg != null) {
             DialogDisplayer.getDefault().notify(new NotifyDescriptor.Message(msg));
             return false;
         }
-        actionsPanel.ok ();
+        actionsPanel.ok();
         breakpoint.setLineNumber(Integer.parseInt(tfLineNumber.getText().trim()));
-        breakpoint.setCondition (tfCondition.getText ());
-        if (createBreakpoint)
-            DebuggerManager.getDebuggerManager ().addBreakpoint (breakpoint);
+        breakpoint.setCondition(tfCondition.getText());
+        // Check if this breakpoint is already set
+        DebuggerManager dm = DebuggerManager.getDebuggerManager ();
+        Breakpoint[] bs = dm.getBreakpoints ();
+        int i, k = bs.length;
+        for (i = 0; i < k; i++) {
+            if (bs[i] instanceof LineBreakpoint) {
+                LineBreakpoint lb = (LineBreakpoint) bs[i];
+                // Compare line numbers
+                if (breakpoint.getLineNumber() != lb.getLineNumber()) {
+                    continue;
+                }
+                // Compare file names
+                String url = breakpoint.getURL();
+                if (!url.equals(lb.getURL())) {
+                    continue;
+                }
+                // Compare conditions
+                String condition = breakpoint.getCondition();
+                if (condition != null) {
+                    if (!condition.equals(lb.getCondition())) {
+                        continue;
+                    }
+                } else {
+                    if (lb.getCondition() != null) {
+                        continue;
+                    }
+                }
+                // Check if this breakpoint is enabled
+                if (!lb.isEnabled()) {
+                    bs[i].enable();
+                }
+                return true;
+            }
+        }
+        // Create a new breakpoint
+        if (createBreakpoint) {
+	    DebuggerManager.getDebuggerManager().addBreakpoint(breakpoint);
+	}
         return true;
     }
     
@@ -306,7 +374,7 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
      *
      * @return whether customizer can be closed
      */
-    public boolean cancel () {
+    public boolean cancel() {
         return true;
     }
     
@@ -317,27 +385,53 @@ public class LineBreakpointPanel extends JPanel implements Controller, org.openi
      * @return <code>true</code> whether value of this customizer 
      * is valid
      */
-    public boolean isValid () {
+    public boolean isValid() {
         return true;
     }
     
-    private String valiadateMsg () {
+    private String validateBreakpoint() {
+	String path = tfFileName.getText();
+	File file;
+	
+	// First, validate the path
+	if (path == null || path.length() == 0) {
+	    return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_No_File_Name_Spec");
+	}
+	if (path.charAt(0) == '/' || path.charAt(0) == '\'') { // Can't rely on direction of slash on Windows
+	    file = new File(path);
+	    if (!file.exists()) {
+		return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_File_Name_Does_Not_Exist"); // NOI18N
+	    }
+	    // need a way to find the active GdbDebuggerImpl to do the following validation...
+//	} else {
+//	    if (debugger != null) {
+//		String rundir = debugger.getRunDirectory();
+//		file = new File(rundir, path);
+//		if (!file.exists()) {
+//		    return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_File_Name_Does_Not_Exist"); // NOI18N
+//		}
+//	    }
+	}
+	
+	// Now validate the line number
         try {
             int line = Integer.parseInt(tfLineNumber.getText().trim());
             if (line <= 0) {
-                return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_NonPositive_Line_Number_Spec");
+                return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_NonPositive_Line_Number_Spec"); // NOI18N
             }
             int maxLine = findNumLines(breakpoint.getURL());
             if (maxLine == 0) { // Not found
                 maxLine = Integer.MAX_VALUE; // Not to bother the user when we did not find it
             }
             if (line > maxLine) {
-                return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_TooBig_Line_Number_Spec",
+                return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_TooBig_Line_Number_Spec", // NOI18N
                         Integer.toString(line), Integer.toString(maxLine));
             }
         } catch (NumberFormatException e) {
-            return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_No_Line_Number_Spec");
+            return NbBundle.getMessage(LineBreakpointPanel.class, "MSG_No_Line_Number_Spec"); // NOI18N
         }
+	
+	// No validation for the (currently unsupported) condition
         return null;
     }
     
